--- a/PersonalDesktopOnline/WebContent/WEB-INF/web.xml
+++ b/PersonalDesktopOnline/WebContent/WEB-INF/web.xml
@@ -4,4 +4,10 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
+  <resource-ref>
+    <description>DB Connection Pool</description>
+    <res-ref-name>jdbc/conDB</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
