--- a/PersonalDesktopOnline/WebContent/WEB-INF/web.xml
+++ b/PersonalDesktopOnline/WebContent/WEB-INF/web.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>PersonalDesktopOnline</display-name>
-  
   <resource-ref>
     <description>DB Connection Pool</description>
     <res-ref-name>jdbc/conDB</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
-  
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>ProtectedArea</web-resource-name>
@@ -29,12 +27,7 @@
     </form-login-config>
   </login-config>
   
-<!--  <servlet> -->
-<!--    <servlet-name>DefaultServlet</servlet-name> -->
-<!--    <servlet-class>pdo.servlets.DefaultServlet</servlet-class> -->
-<!--  </servlet> -->
-<!-- <servlet-mapping> -->
-<!--     <servlet-name>DefaultServlet</servlet-name> -->
-<!--     <url-pattern>/home</url-pattern> -->
-<!-- </servlet-mapping> -->
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
 </web-app>
